types あたりを更新
