# src/vue3/mos-order/src/types/product.ts
@@ -1,0 +1,15 @@
+export type Product = {
+    id: number;
+    slug: string;
+    name: string;
+    description: string;
+    image: string;
+    price: string;
+    sortid: number;
+    display: number;
+    created_at: string;
+    updated_at: string;
+    deleted_at: boolean;
+};
+
+
